--- a/html/diary/2012-10-18.html
+++ b/html/diary/2012-10-18.html
@@ -10,142 +10,142 @@
 <h1 id="toc_1">2012*10*18</h1>
 
 <p>
-ÕâÁ½ÌìÔÚ¿´<a href="Âí²®Ó¹.html">Âí²®Ó¹</a>µÄÐ¡Ëµ¡¶<a href="±ÊÚ£ËæÂ¼.html">±ÊÚ£ËæÂ¼</a>¡·¡£
+è¿™ä¸¤å¤©åœ¨çœ‹<a href="é©¬ä¼¯åº¸.html">é©¬ä¼¯åº¸</a>çš„å°è¯´ã€Š<a href="ç¬”å†¢éšå½•.html">ç¬”å†¢éšå½•</a>ã€‹ã€‚
 </p>
 
 <p>
-ÕûÀíÁË×Ô¼ºµÄ¹¤×÷Ë¼Â·£¬´óÖÂÓÐÒÔÏÂÊÂÇéÐèÒª×ö¡£
+æ•´ç†äº†è‡ªå·±çš„å·¥ä½œæ€è·¯ï¼Œå¤§è‡´æœ‰ä»¥ä¸‹äº‹æƒ…éœ€è¦åšã€‚
 </p>
 
 
-<h3 id="toc_1.0.1">ÏîÄ¿</h3>
+<h3 id="toc_1.0.1">é¡¹ç›®</h3>
 <ol>
 <li>
-¶þÆÚÍ¶±ê·½°¸×¼±¸
+äºŒæœŸæŠ•æ ‡æ–¹æ¡ˆå‡†å¤‡
 
 <ul>
 <li>
-Ö¸ÎÆÒÇ·½°¸È·ÈÏ ºÍ¿ª·¢ÈÕ³ÌÈ·ÈÏ£»
+æŒ‡çº¹ä»ªæ–¹æ¡ˆç¡®è®¤ å’Œå¼€å‘æ—¥ç¨‹ç¡®è®¤ï¼›
 
 </ul>
 </ol>
 
 <ol>
 <li>
-µç×Ó»¤ÕÕ·½°¸º£ÍâÍØÕ¹
+ç”µå­æŠ¤ç…§æ–¹æ¡ˆæµ·å¤–æ‹“å±•
 
 <ul>
 <li>
-×¼±¸µç×Ó»¤ÕÕ·½°¸½éÉÜ½ºÆ¬£»
+å‡†å¤‡ç”µå­æŠ¤ç…§æ–¹æ¡ˆä»‹ç»èƒ¶ç‰‡ï¼›
 
 <li>
-ÏÂÖÜ¶þ23ºÅ£¬¸øµç×Ó½ø³ö¿Ú¹«Ë¾×ö·½°¸½éÉÜ£»
+ä¸‹å‘¨äºŒ23å·ï¼Œç»™ç”µå­è¿›å‡ºå£å…¬å¸åšæ–¹æ¡ˆä»‹ç»ï¼›
 
 </ul>
 </ol>
 
-<h3 id="toc_1.0.2">ÊÐ³¡¹æ»®</h3>
+<h3 id="toc_1.0.2">å¸‚åœºè§„åˆ’</h3>
 <ol>
 <li>
-Íê³É¹«Ë¾»ã±¨½ºÆ¬
+å®Œæˆå…¬å¸æ±‡æŠ¥èƒ¶ç‰‡
 
 <ul>
 <li>
-ÕûÀí¹«Ë¾ÀíÄî¡¢Ê¹ÃüºÍÔ¸¾°£»
-
-</ul>
-</ol>
-
-<ol>
-<li>
-»ã×Ü¹«Ë¾µ±Ç°ÏîÄ¿£¬¸÷Ê¡ÊÐÍâ°ì»ú»áµã¡¢¾ö²ßÁ´£»
-
-</ol>
-
-
-<h3 id="toc_1.0.3">ÍÅ¶Ó½¨Éè</h3>
-<ol>
-<li>
-ÊÛÇ°ÍÅ¶Ó½¨Éè
-
-<ul>
-<li>
-ÍÅ¶ÓÄÜÁ¦ÌáÉý£¬´ïµ½ÁùÏî¹¤×÷µÄÒªÇó
-
-<ul>
-<li>
-ÏîÄ¿Ö§³Ö£¬ÐèÇó¹ÜÀí£¬ÎÄµµÐ´×÷£¬¿ª·¢¼à¿Ø£¬½»¸¶·çÏÕ¿ØÖÆ£¬ºÏ×÷·½¹ÜÀí£»
-
-</ul>
-<li>
-²ÎÓëµ½¿ª·¢ÍÅ¶ÓµÄÉè¼Æ¡¢¹æ»®¡¢ÎÄµµÐ´×÷¹¤×÷£»
-
-<li>
-ÊáÀíµ±Ç°ÕýÔÚ½»¸¶µÄÏîÄ¿£¬°ïÖúÏúÊÛÀíÇå¿Í»§¹ØÏµ£¬Ñ°ÕÒ»ú»áµã£»
-
-<li>
-ÊáÀí¹«Ë¾µ±Ç°²úÆ·¡¢½â¾ö·½°¸ºÍ¹æ»®£»
-
-<li>
-ºÍÏúÊÛÍÅ¶Ó×é³É´îµµ£»
+æ•´ç†å…¬å¸ç†å¿µã€ä½¿å‘½å’Œæ„¿æ™¯ï¼›
 
 </ul>
 </ol>
 
 <ol>
 <li>
-ÏúÊÛÍÅ¶Ó½¨Éè
+æ±‡æ€»å…¬å¸å½“å‰é¡¹ç›®ï¼Œå„çœå¸‚å¤–åŠžæœºä¼šç‚¹ã€å†³ç­–é“¾ï¼›
+
+</ol>
+
+
+<h3 id="toc_1.0.3">å›¢é˜Ÿå»ºè®¾</h3>
+<ol>
+<li>
+å”®å‰å›¢é˜Ÿå»ºè®¾
 
 <ul>
 <li>
-¸÷Ê¡ÊÐÍâ°ì·Ö¹¤£»
+å›¢é˜Ÿèƒ½åŠ›æå‡ï¼Œè¾¾åˆ°å…­é¡¹å·¥ä½œçš„è¦æ±‚
+
+<ul>
+<li>
+é¡¹ç›®æ”¯æŒï¼Œéœ€æ±‚ç®¡ç†ï¼Œæ–‡æ¡£å†™ä½œï¼Œå¼€å‘ç›‘æŽ§ï¼Œäº¤ä»˜é£Žé™©æŽ§åˆ¶ï¼Œåˆä½œæ–¹ç®¡ç†ï¼›
+
+</ul>
+<li>
+å‚ä¸Žåˆ°å¼€å‘å›¢é˜Ÿçš„è®¾è®¡ã€è§„åˆ’ã€æ–‡æ¡£å†™ä½œå·¥ä½œï¼›
+
+<li>
+æ¢³ç†å½“å‰æ­£åœ¨äº¤ä»˜çš„é¡¹ç›®ï¼Œå¸®åŠ©é”€å”®ç†æ¸…å®¢æˆ·å…³ç³»ï¼Œå¯»æ‰¾æœºä¼šç‚¹ï¼›
+
+<li>
+æ¢³ç†å…¬å¸å½“å‰äº§å“ã€è§£å†³æ–¹æ¡ˆå’Œè§„åˆ’ï¼›
+
+<li>
+å’Œé”€å”®å›¢é˜Ÿç»„æˆæ­æ¡£ï¼›
 
 </ul>
 </ol>
 
 <ol>
 <li>
-¿ª·¢¹Ç¸ÉÅàÑø
+é”€å”®å›¢é˜Ÿå»ºè®¾
 
 <ul>
 <li>
-ÏµÍ³Éè¼Æ×¨¼Ò£»
-
-<li>
-Èí¼þ¿ª·¢Ö÷¹Ü£»
+å„çœå¸‚å¤–åŠžåˆ†å·¥ï¼›
 
 </ul>
 </ol>
 
 <ol>
 <li>
-»ù²ãÖ÷¹ÜÅàÑø
+å¼€å‘éª¨å¹²åŸ¹å…»
 
 <ul>
 <li>
-¹ÜÀíÄÜÁ¦ÌáÉý£»
+ç³»ç»Ÿè®¾è®¡ä¸“å®¶ï¼›
 
 <li>
-ÊÚÈ¨£»
-
-<li>
-³¤ÆÚÐ½³ê¼Æ»®£»
+è½¯ä»¶å¼€å‘ä¸»ç®¡ï¼›
 
 </ul>
 </ol>
 
-<h3 id="toc_1.0.4">ÐÐÕþºóÇÚ</h3>
 <ol>
 <li>
-ÎÞÏßÍøÂçµÄIP MAC°ó¶¨£»
+åŸºå±‚ä¸»ç®¡åŸ¹å…»
+
+<ul>
+<li>
+ç®¡ç†èƒ½åŠ›æå‡ï¼›
 
 <li>
-°ì¹«ÊÒºÍ¿ª·¢ÖÐÐÄÔö¼ÓÎ¢²¨Â¯£¬±ùÏä£»
+æŽˆæƒï¼›
+
+<li>
+é•¿æœŸè–ªé…¬è®¡åˆ’ï¼›
+
+</ul>
+</ol>
+
+<h3 id="toc_1.0.4">è¡Œæ”¿åŽå‹¤</h3>
+<ol>
+<li>
+æ— çº¿ç½‘ç»œçš„IP MACç»‘å®šï¼›
+
+<li>
+åŠžå…¬å®¤å’Œå¼€å‘ä¸­å¿ƒå¢žåŠ å¾®æ³¢ç‚‰ï¼Œå†°ç®±ï¼›
 
 </ol>
 
 <p>
-ÕâÁ½Ìì¹¤×÷Ã»ÓÐÌ«¶Ø´ÙÊÛÇ°ÍÅ¶ÓÊä³ö²ÄÁÏ£¬±»¿ª·¢²¿ÃÅÔðÎÊÁË¡£
+è¿™ä¸¤å¤©å·¥ä½œæ²¡æœ‰å¤ªæ•¦ä¿ƒå”®å‰å›¢é˜Ÿè¾“å‡ºææ–™ï¼Œè¢«å¼€å‘éƒ¨é—¨è´£é—®äº†ã€‚
 </p>
 
 </body>
