--- a/html/diary/马伯庸.html
+++ b/html/diary/马伯庸.html
@@ -2,15 +2,15 @@
 <html>
 <head>
 <link rel="Stylesheet" type="text/css" href="../style.css">
-<title>Âí²®Ó¹</title>
+<title>é©¬ä¼¯åº¸</title>
 <meta http-equiv="Content-Type" content="text/html; charset=cp936">
 </head>
 <body>
 
-<h1 id="toc_1">Âí²®Ó¹</h1>
+<h1 id="toc_1">é©¬ä¼¯åº¸</h1>
 
 <p>
-°ËÁãºó×÷¼Ò£¬±Ê·¨¶à±ä£¬ÉÆÓÚÄ£·Â£¬ÏëÏóÁ¦ÈçÌìÂíÐÐ¿Õ¡£
+å…«é›¶åŽä½œå®¶ï¼Œç¬”æ³•å¤šå˜ï¼Œå–„äºŽæ¨¡ä»¿ï¼Œæƒ³è±¡åŠ›å¦‚å¤©é©¬è¡Œç©ºã€‚
 </p>
 
 </body>
