--- a/html/diary/2012-10-22.html
+++ b/html/diary/2012-10-22.html
@@ -10,12 +10,12 @@
 <h3 id="toc_0.0.1">2012-10-22</h3>
 
 <p>
-ÂèÂèÀ´±±¾©ÁË¡£
+å¦ˆå¦ˆæ¥åŒ—äº¬äº†ã€‚
 </p>
 
 <p>
-ÉÏÎç´øÊÛÇ°¶ÓÎéºÍ¿ª·¢¿ª»á£¬Ð§¹ûºÜ²»ºÃ¡£
-ÏÂÎçºÍ³ÂÖ¾¸ÕÁÄÌì£¬ÁÄÊÛÇ°¶ÓÎéÔõÃ´¸ÄÔì¡£
+ä¸Šåˆå¸¦å”®å‰é˜Ÿä¼å’Œå¼€å‘å¼€ä¼šï¼Œæ•ˆæžœå¾ˆä¸å¥½ã€‚
+ä¸‹åˆå’Œé™ˆå¿—åˆšèŠå¤©ï¼ŒèŠå”®å‰é˜Ÿä¼æ€Žä¹ˆæ”¹é€ ã€‚
 </p>
 
 </body>
