--- a/html/diary/2012-11-02.html
+++ b/html/diary/2012-11-02.html
@@ -10,16 +10,16 @@
 <h3 id="toc_0.0.1">2012-11-02</h3>
 
 <p>
-ÉÏÎç¼ÌÐøÂìÒÏ°á¼Ò£¬°ÑÇ®´ÓÅ©ÐÐÍùÕÐÐÐ×ª¡£
+ä¸Šåˆç»§ç»­èš‚èšæ¬å®¶ï¼ŒæŠŠé’±ä»Žå†œè¡Œå¾€æ‹›è¡Œè½¬ã€‚
 </p>
 
 <p>
-1.	ÊÛÇ°¶ÓÎéÈËÁ¦²¹³ä£»
-2.	¸÷Ê¡ÊÐÍâ°ìÊÐ³¡Çé¿öÊáÀí£»
-3.	¿ª·¢ºÍÊÛÇ°ÈçºÎÖ§³ÖÏúÊÛÏîÄ¿£»
-4.	¿ª·¢ÖÐÐÄ°ì¹«»·¾³¸ÄÉÆ£»
-5. 	Ã¿ÔÂ¼¨Ð§¿¼ºË¹âÈÙ°ñµÄ¼¤Àø´ëÊ©£»
-6.	Ç¿»¯¿¼ÇÚÏµÍ³ºÍÍâ³ö¹«¸É¹ÜÀí£»
+1.	å”®å‰é˜Ÿä¼äººåŠ›è¡¥å……ï¼›
+2.	å„çœå¸‚å¤–åŠžå¸‚åœºæƒ…å†µæ¢³ç†ï¼›
+3.	å¼€å‘å’Œå”®å‰å¦‚ä½•æ”¯æŒé”€å”®é¡¹ç›®ï¼›
+4.	å¼€å‘ä¸­å¿ƒåŠžå…¬çŽ¯å¢ƒæ”¹å–„ï¼›
+5. 	æ¯æœˆç»©æ•ˆè€ƒæ ¸å…‰è£æ¦œçš„æ¿€åŠ±æŽªæ–½ï¼›
+6.	å¼ºåŒ–è€ƒå‹¤ç³»ç»Ÿå’Œå¤–å‡ºå…¬å¹²ç®¡ç†ï¼›
 </p>
 
 </body>
