--- a/html/index.html
+++ b/html/index.html
@@ -9,14 +9,14 @@
 
 <div class="toc">
 <ul>
-<li><a href="#toc_1">ÔµÆð</a>
+<li><a href="#toc_1">ç¼˜èµ·</a>
 <li><a href="#toc_2">Technology</a>
 <ul>
 <li><a href="#toc_2.1">OS</a>
 <li><a href="#toc_2.2">Security</a>
 <li><a href="#toc_2.3">CISSP</a>
 <ul>
-<li><a href="#toc_2.3.1">ÎÞ±ß½ç°²È«</a>
+<li><a href="#toc_2.3.1">æ— è¾¹ç•Œå®‰å…¨</a>
 <li><a href="#toc_2.3.2">Anti-DDoS</a>
 <ul>
 <li><a href="#toc_2.3.2.1">DDoS Attacks</a>
@@ -46,14 +46,14 @@
 </ul>
 </div>
 
-<h1 id="toc_1">ÔµÆð</h1>
+<h1 id="toc_1">ç¼˜èµ·</h1>
 
 <p>
-Õâ¶ùÊÇÒ»¸ö±Ê¼ÇÐ¡Õ¾£¬×¨ÃÅÓÃÀ´×Ü½á×Ô¼ºµÄÒ»Ð©Ñ§Ï°±Ê¼ÇºÍÏë·¨£¬µ±Ç°»¹ÊÇÁ·±Ê½×¶Î¡£
+è¿™å„¿æ˜¯ä¸€ä¸ªç¬”è®°å°ç«™ï¼Œä¸“é—¨ç”¨æ¥æ€»ç»“è‡ªå·±çš„ä¸€äº›å­¦ä¹ ç¬”è®°å’Œæƒ³æ³•ï¼Œå½“å‰è¿˜æ˜¯ç»ƒç¬”é˜¶æ®µã€‚
 </p>
 
 <p>
-<a href="ÔÚSamsung ARM ChromebookÖÐ°²×°Ach Linux.html">ÔÚSamsung ARM ChromebookÖÐ°²×°Ach Linux</a>
+<a href="åœ¨Samsung ARM Chromebookä¸­å®‰è£…Ach Linux.html">åœ¨Samsung ARM Chromebookä¸­å®‰è£…Ach Linux</a>
 </p>
 
 
@@ -70,7 +70,7 @@ Linux
 <h2 id="toc_2.2">Security</h2>
 
 <h2 id="toc_2.3">CISSP</h2>
-<h3 id="toc_2.3.1">ÎÞ±ß½ç°²È«</h3>
+<h3 id="toc_2.3.1">æ— è¾¹ç•Œå®‰å…¨</h3>
 
 <h3 id="toc_2.3.2">Anti-DDoS</h3>
 <p>
@@ -120,48 +120,48 @@ DNS query Flood
 
 <h1 id="toc_3">Cloud Computing</h1>
 <p>
-ÔÆ¼ÆËãÒª½â¾öµÄÎÊÌâ
+äº‘è®¡ç®—è¦è§£å†³çš„é—®é¢˜
 </p>
 <ul>
 <li>
-º£Á¿Êý¾ÝµÄ´¦Àí¡¢´æ´¢£»
+æµ·é‡æ•°æ®çš„å¤„ç†ã€å­˜å‚¨ï¼›
 
 <li>
-¿ÉÉìËõÐÔ£»
+å¯ä¼¸ç¼©æ€§ï¼›
 
 <li>
-¿É¿¿ÐÔ£»
+å¯é æ€§ï¼›
 
 </ul>
 
 <h2 id="toc_3.1">Map Reduce</h2>
 
 <p>
-GoogleµÄJeffery DeanÉè¼ÆÁË Map Reduce ¼ÆËãÄ£ÐÍ£¬ÓÃÓÚÒþ²Ø²¢ÐÐ»¯¡¢ÈÝ´í¡¢Êý¾Ý·Ö²¼¡¢¸ºÔØ¾ùºâµÈÏ¸½Ú¡£
-¸ÃÄ£ÐÍÀ´×ÔLispµÈ·ºº¯Ê½±à³ÌÓïÑÔ¡£
+Googleçš„Jeffery Deanè®¾è®¡äº† Map Reduce è®¡ç®—æ¨¡åž‹ï¼Œç”¨äºŽéšè—å¹¶è¡ŒåŒ–ã€å®¹é”™ã€æ•°æ®åˆ†å¸ƒã€è´Ÿè½½å‡è¡¡ç­‰ç»†èŠ‚ã€‚
+è¯¥æ¨¡åž‹æ¥è‡ªLispç­‰æ³›å‡½å¼ç¼–ç¨‹è¯­è¨€ã€‚
 </p>
 
 <p>
-¿ÉÒÔÓÃÓÚ×ö 
+å¯ä»¥ç”¨äºŽåš 
 </p>
 <ul>
 <li>
-·Ö²¼Ê½µÄGrep
+åˆ†å¸ƒå¼çš„Grep
 
 <li>
-¼ÆËãURL·ÃÎÊÆ½ÂÊ£»
+è®¡ç®—URLè®¿é—®å¹³çŽ‡ï¼›
 
 <li>
-µ¹×ªÍøÂçÁ´½ÓÍ¼£»
+å€’è½¬ç½‘ç»œé“¾æŽ¥å›¾ï¼›
 
 <li>
-Ã¿¸öÖ÷»úµÄ<a href="ÊõÓïÏòÁ¿.html">ÊõÓïÏòÁ¿</a>£»
+æ¯ä¸ªä¸»æœºçš„<a href="æœ¯è¯­å‘é‡.html">æœ¯è¯­å‘é‡</a>ï¼›
 
 <li>
-<a href="µ¹ÅÅË÷Òý.html">µ¹ÅÅË÷Òý</a>£»
+<a href="å€’æŽ’ç´¢å¼•.html">å€’æŽ’ç´¢å¼•</a>ï¼›
 
 <li>
-·Ö²¼Ê½ÅÅÐò£»
+åˆ†å¸ƒå¼æŽ’åºï¼›
 
 </ul>
 <p>
@@ -185,26 +185,26 @@ GoogleµÄJeffery DeanÉè¼ÆÁË Map Reduce ¼ÆËãÄ£ÐÍ£¬ÓÃÓÚÒþ²Ø²¢ÐÐ»¯¡¢ÈÝ´í¡¢Êý¾Ý·Ö²¼¡¢
 
 <h2 id="toc_6.1">GTD</h2>
 <p>
-Ê±¼ä¹ÜÀí×¼Ôò
+æ—¶é—´ç®¡ç†å‡†åˆ™
 </p>
 <ul>
 <li>
-Ê÷Á¢Ä¿±ê£»
+æ ‘ç«‹ç›®æ ‡ï¼›
 
 <li>
-ÖÆ¶¨¼Æ»®£»
+åˆ¶å®šè®¡åˆ’ï¼›
 
 <li>
-Çø·ÖÈÎÎñµÄÓÅÏÈ¼¶£»
+åŒºåˆ†ä»»åŠ¡çš„ä¼˜å…ˆçº§ï¼›
 
 <li>
-ºÏÀí·ÖÅäÊ±¼ä£»
+åˆç†åˆ†é…æ—¶é—´ï¼›
 
 <li>
-ºÍ±ðÈËµÄÊ±¼äÐ­×÷£»
+å’Œåˆ«äººçš„æ—¶é—´åä½œï¼›
 
 <li>
-ÖÆ¶¨¹æÔò£¬×ñÊØ¼ÍÂÉ£¬Ñø³ÉÏ°¹ß£»
+åˆ¶å®šè§„åˆ™ï¼Œéµå®ˆçºªå¾‹ï¼Œå…»æˆä¹ æƒ¯ï¼›
 
 </ul>
 
@@ -217,8 +217,8 @@ GoogleµÄJeffery DeanÉè¼ÆÁË Map Reduce ¼ÆËãÄ£ÐÍ£¬ÓÃÓÚÒþ²Ø²¢ÐÐ»¯¡¢ÈÝ´í¡¢Êý¾Ý·Ö²¼¡¢
 
 <h3 id="toc_7.1.1">Hoekey</h3>
 <p>
-<a href="Hoekey.html">Hoekey</a>ÊÇÒ»¿îºÜ¹ÅÀÏµÄ¿ì½Ý¼üÈí¼þ£¬Ã²ËÆÒÑ¾­Í£Ö¹Î¬»¤ÁË£¬Ô¶Ã»ÓÐ<a href="Autohotkey.html">Autohotkey</a>Á÷ÐÐ¡£
-ºÜÔçÒÔÇ°¾ÍÓÃËü£¬Ò²Ã»ÓÐ¶îÍâµÄÐèÇó£¬Ò²¾ÍÒ»Ö±Ã»¸ü»»¡£
+<a href="Hoekey.html">Hoekey</a>æ˜¯ä¸€æ¬¾å¾ˆå¤è€çš„å¿«æ·é”®è½¯ä»¶ï¼Œè²Œä¼¼å·²ç»åœæ­¢ç»´æŠ¤äº†ï¼Œè¿œæ²¡æœ‰<a href="Autohotkey.html">Autohotkey</a>æµè¡Œã€‚
+å¾ˆæ—©ä»¥å‰å°±ç”¨å®ƒï¼Œä¹Ÿæ²¡æœ‰é¢å¤–çš„éœ€æ±‚ï¼Œä¹Ÿå°±ä¸€ç›´æ²¡æ›´æ¢ã€‚
 </p>
 
 </body>
